--- a/PCA1.ipynb
+++ b/PCA1.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA1.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPxsUYdCGUp92iYDWRPodsu",
+      "authorship_tag": "ABX9TyOkmSOoELfOItH5VmShlGpS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,17 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/PCA1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C9lx8dEeDeaT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Using synthetic data, find the principal components for the dataset. <br>\n",
+        "The use the PCs to plot the data. "
       ]
     },
     {
@@ -53,9 +64,9 @@
       },
       "source": [
         "Make synthetic data<br>\n",
-        "1000 samples<br>\n",
-        "4 clusters\n",
-        "10 input features"
+        ">1000 samples<br>\n",
+        "4 clusters<br>\n",
+        "10 input features<br>"
       ]
     },
     {
@@ -96,7 +107,9 @@
         "colab_type": "text"
       },
       "source": [
-        "Plot the data each dimension by dimension"
+        "Plot the data each dimension by dimension<br>\n",
+        "The scatter_matrix function plots each feature against each feature. <br>\n",
+        "With 10 dimensions it is difficult to visualize what is happening with the data. "
       ]
     },
     {
@@ -112,6 +125,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5UyysiaIEt9W",
+        "colab_type": "text"
+      },
+      "source": [
+        "A color version of one of the above plots. <br>\n",
+        "Even using color it is still not very easy to vizualize the data. "
+      ]
     },
     {
       "cell_type": "code",
@@ -135,7 +159,8 @@
       },
       "source": [
         " **Create a PCA model**\n",
-        " X1 is the 1000 x 10 data and Y1 is cluster assignment for the 1000 samples. Create a PCA model with 4 components from sklearn.decomposition."
+        " X1 is the 1000 x 10 data and Y1 is cluster assignment for the 1000 samples. Create a PCA model with 4 components from sklearn.decomposition.<br>\n",
+        "The four components are linear combinations of the 10 original features. "
       ]
     },
     {
@@ -158,7 +183,9 @@
         "colab_type": "text"
       },
       "source": [
-        "The simulated data is already centered and scales, so we can go ahead and fit the PCA model. We will fit the PCA model using fit_transform function to our data X1 and the result pc contains the principal components."
+        "The simulated data is already centered and scaled, so we can go ahead and fit the PCA model.<br> \n",
+        "We will fit the PCA model using fit_transform function to our data X1 and pc contains the four principal components.<br>\n",
+        "The function fit_transform will use the principal components to predict the cluster for each of the dataset values."
       ]
     },
     {
@@ -194,9 +221,9 @@
       },
       "source": [
         "pc_df = pd.DataFrame(data = pc , \n",
-        "        columns = ['PC1', 'PC2','PC3','PC4'])\n",
+        "        columns = ['PC1', 'PC2','PC3','PC4']) #Add additional column names here\n",
         "pc_df['Cluster'] = Y1\n",
-        "pc_df.head()"
+        "pc_df.head(20)"
       ],
       "execution_count": null,
       "outputs": []
@@ -209,7 +236,9 @@
       },
       "source": [
         "Examine the variance explained by each principal component. \n",
-        "<br>The first two principal components explains over 70% of the variation in the data."
+        "<br>The first two principal components explains over 70% of the variation in the data.\n",
+        "\n",
+        "[pca.explained_variance_ratio_](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html)"
       ]
     },
     {
@@ -221,6 +250,29 @@
       },
       "source": [
         "pca.explained_variance_ratio_"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r5ZBCLkGHZgb",
+        "colab_type": "text"
+      },
+      "source": [
+        "Looking at the cumulative sum of the variance, we can see 92% of the variance is explained with the first four PCs. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J6i-bX0bHTlI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pca.explained_variance_ratio_.cumsum()"
       ],
       "execution_count": null,
       "outputs": []
@@ -243,6 +295,7 @@
         "colab": {}
       },
       "source": [
+        "#Add additional column names here\n",
         "df = pd.DataFrame({'var':pca.explained_variance_ratio_,'PC':['PC1','PC2','PC3','PC4']})\n",
         "plt.plot('PC',\"var\",  data=df, color=\"c\");"
       ],
@@ -276,6 +329,18 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BHh21-E2ITHF",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Assignment 1:** <br>\n",
+        "Change the number of principal components to different values. Can you increase the percentage of explained variation?<br><br>\n",
+        "Remember, you will have to add column names when you change the number of PCs. "
+      ]
     }
   ]
 }
