--- a/PCA2.ipynb
+++ b/PCA2.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA2.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNkvCvffy9gzEL5r0ovV2Z4",
+      "authorship_tag": "ABX9TyMHqpdb04k6rqDPa4Tt6BGP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,6 +80,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BYeJB3n3QRK7",
+        "colab_type": "text"
+      },
+      "source": [
+        "The question, given certain features, can we predict who will get diabetes?"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "7gYe4LEmkYZo",
@@ -129,9 +139,10 @@
       },
       "source": [
         "array = dataframe.values\n",
-        "X = array[:,0:8] #started with 1 to remove header row\n",
+        "X = array[:,0:8] \n",
         "Y = array[:,8]\n",
-        "Y.shape"
+        "print(\"Y has shape: \",Y.shape)\n",
+        "print(\"X has shape: \",X.shape)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -143,7 +154,7 @@
         "colab_type": "text"
       },
       "source": [
-        "examine the variance explained by each principal component. We can clearly see that the first  principal component explains over 88% of the variation in the data."
+        "Examine the variance explained by each principal component. We can clearly see that the first  principal component explains over 88% of the variation in the data."
       ]
     },
     {
@@ -158,7 +169,20 @@
         "fit = pca.fit(X)\n",
         "print((\"Explained Variance: %s\") % (fit.explained_variance_ratio_))\n",
         "print(\"\\n\")\n",
-        "print(fit.components_)"
+        "#print(fit.components_)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DI-BxGLySCqc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pca.explained_variance_ratio_.cumsum()"
       ],
       "execution_count": null,
       "outputs": []
@@ -230,6 +254,24 @@
       "cell_type": "code",
       "metadata": {
         "id": "xoXSMVdYuAE0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "sns.lmplot( x=\"PC1\", y=\"Cluster\",\n",
+        "  data=pc_df, \n",
+        "  fit_reg=False, \n",
+        "  hue='Cluster', # color by cluster\n",
+        "  legend=True,\n",
+        "  scatter_kws={\"s\": 60}) # specify the point size"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vSLM_e5LUMJA",
         "colab_type": "code",
         "colab": {}
       },
