--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNyGx8mhRDFOX0MsBwvIuEL",
+      "authorship_tag": "ABX9TyNr3sGDSbrHN4R9WYFZ8DRP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -157,7 +157,7 @@
         "colab": {}
       },
       "source": [
-        "pca = PCA(n_components=4)"
+        "pca = PCA(n_components=2)"
       ],
       "execution_count": null,
       "outputs": []
@@ -184,22 +184,9 @@
       },
       "source": [
         "principalDf = pd.DataFrame(data = principalComponents\n",
-        "             , columns = ['principal component 1', 'principal component 2','principal component 3','principal component 4'])\n",
+        "             , columns = ['principal component 1', 'principal component 2'])\n",
         "\n",
         "principalDf.head(5)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "irUXRtdmLrFr",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "df[['class']].head()"
       ],
       "execution_count": null,
       "outputs": []
@@ -213,7 +200,21 @@
       },
       "source": [
         "finalDf = pd.concat([principalDf, df[['class']]], axis = 1)\n",
-        "finalDf.head(5)\n"
+        "finalDf.head(5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LgFU95C4VK20",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df = pd.DataFrame({'var':pca.explained_variance_ratio_,'PC':['PC1','PC2','PC3','PC4']})\n",
+        "plt.plot('PC',\"var\",  data=df, color=\"c\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -258,6 +259,19 @@
       },
       "source": [
         "pca.explained_variance_ratio_"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kfxIQX_0U1Co",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pca.explained_variance_ratio_.cumsum()"
       ],
       "execution_count": null,
       "outputs": []
