--- a/PCA3.ipynb
+++ b/PCA3.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA3.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNOwBeg6iwLuIYM5oKAZH66",
+      "authorship_tag": "ABX9TyMGab0WcJBLiOaceffb3cNd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dQA-lzez7wUZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "In this notebook we look at high dimensional data: hand drawn digits.<br>\n",
+        "The digits are images 8x8 pixels.<br>\n",
+        "This means a supervised classification model will have 64 inputs.<br>\n",
+        "Can we reduce the number of inputs to the model?"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "avbXuWWJ53-a",
@@ -36,20 +49,10 @@
         "# Clone the entire repo.\n",
         "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
         "%cd cloned-repo\n",
-        "!ls"
+        "print(\"done\")"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "v1--exM11F_3",
-        "colab_type": "text"
-      },
-      "source": [
-        "The usefulness of the dimensionality reduction may not be entirely apparent in only two dimensions, but becomes much more clear when looking at high-dimensional data. "
-      ]
     },
     {
       "cell_type": "code",
@@ -63,7 +66,13 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns; sns.set()\n",
         "from sklearn.datasets import load_digits\n",
-        "from sklearn.decomposition import PCA"
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.model_selection import RepeatedStratifiedKFold\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from numpy import mean\n",
+        "from numpy import std"
       ],
       "execution_count": null,
       "outputs": []
@@ -77,8 +86,9 @@
       "source": [
         "Load the data: hand drawn digits<br>\n",
         "\n",
-        "The data consists of 8×8 pixel images, meaning that they are 64-dimensional (or features)\n",
-        "To gain some intuition into the relationships between these points, we can use PCA to project them to a more manageable number of dimensions, say two:"
+        "The data consists of 8×8 pixel images, meaning that they are 64-dimensional (or features)<br>\n",
+        "\n",
+        "We can use PCA to project them to a more manageable number of dimensions, say two:"
       ]
     },
     {
@@ -98,14 +108,69 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "N6opOuCbBmju",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X = digits.images.reshape((len(digits.images), -1))\n",
+        "y = digits.target"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UUbg2JGpC_AT",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Create a model to classifiy the digits** "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pbugBOeRCxwo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model_orig = DecisionTreeClassifier()\n",
+        "model_orig.fit(X, y)\n",
+        "# evaluate model\n",
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+        "n_scores = cross_val_score(model_orig, X, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+        "# report performance\n",
+        "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i-JME-IS9kUI",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **For the ASSIGNMENT**\n",
+        "Change the number of dimensions here"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "cgAWXyTev2kM",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "pca = PCA(2)  # project from 64 to 2 dimensions\n",
-        "projected = pca.fit_transform(digits.data)\n",
-        "print(digits.data.shape)\n",
+        "#fit the model to the data\n",
+        "projected = pca.fit_transform(X)\n",
+        "print(X.shape)\n",
         "print(projected.shape)\n"
       ],
       "execution_count": null,
@@ -118,7 +183,9 @@
         "colab_type": "text"
       },
       "source": [
-        "We can now plot the first two principal components of each point to learn about the data:"
+        "We can now plot the first two principal components of each point to learn about the data. <br>\n",
+        "There are 10 clusters, one for each digit between 0 - 9. <br>\n",
+        "Using just two PCs, we get the following clusters. "
       ]
     },
     {
@@ -216,6 +283,53 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vX53CakoCncH",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Training the model on the principal components**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DF9qqDHoA_Nt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = DecisionTreeClassifier()\n",
+        "#List of (name, transform) tuples (implementing fit/transform) that are chained, \n",
+        "#in the order in which they are chained, with the last object an estimator.\n",
+        "pipeline = Pipeline(steps=[('p',pca),('m',model)])\n",
+        "pipeline.fit(projected, y)\n",
+        "# evaluate model\n",
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+        "n_scores = cross_val_score(pipeline, X, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+        "# report performance\n",
+        "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jIAGYmQh-ST3",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Assignment**\n",
+        "The first model, model_orig was trained using all 64 pixels. It had an 85% accuracy score. <br>\n",
+        "\n",
+        "The second model, model, was trained using the first two principal components. It had an accuracy of 58%\n",
+        "\n",
+        "Your assignment: Modify the code for PCA from 2 inputs to more inputs. Try to increase the accuracy of the model using different PCs. "
+      ]
     }
   ]
 }
