--- a/PCA3.ipynb
+++ b/PCA3.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA3.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyMGab0WcJBLiOaceffb3cNd",
+      "authorship_tag": "ABX9TyNC0HEK+cO4T9Fk67412Al3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,7 +155,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# **For the ASSIGNMENT**\n",
+        "**For the ASSIGNMENT**\n",
         "Change the number of dimensions here"
       ]
     },
@@ -309,7 +309,7 @@
         "pipeline.fit(projected, y)\n",
         "# evaluate model\n",
         "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
-        "n_scores = cross_val_score(pipeline, X, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+        "n_scores = cross_val_score(pipeline, projected, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
         "# report performance\n",
         "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
       ],
