--- a/PCA4.ipynb
+++ b/PCA4.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA4.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNQT4vQCAntDQbaqgFBE17e",
+      "authorship_tag": "ABX9TyPr1Zd5PtJckRGNVCvB7rrx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -157,6 +157,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "iTuEUnWpcZBF",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Create a model to classifiy the digits** "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pbugBOeRCxwo",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model_orig = DecisionTreeClassifier()\n",
+        "model_orig.fit(X, y)\n",
+        "# evaluate model\n",
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+        "n_scores = cross_val_score(model_orig, X, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+        "# report performance\n",
+        "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "wRha0DxqIeft",
         "colab_type": "text"
       },
@@ -175,6 +204,36 @@
         "np.random.seed(42)\n",
         "noisy = np.random.normal(digits.data, 4)\n",
         "plot_digits(noisy)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gy1HhyG2dqNm",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Train the model on the noisy data**\n",
+        "What happens to the accuracy?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TtJ7HM3TcnoX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model_noise = DecisionTreeClassifier()\n",
+        "model_noise.fit(noisy, y)\n",
+        "# evaluate model\n",
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+        "n_scores = cross_val_score(model_noise, noisy, y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+        "# report performance\n",
+        "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
       ],
       "execution_count": null,
       "outputs": []
@@ -238,6 +297,25 @@
       "source": [
         "This signal preserving/noise filtering property makes PCA a very useful feature selection routine—for example, rather than training a classifier on very high-dimensional data, you might instead train the classifier on the lower-dimensional representation, which will automatically serve to filter out random noise in the inputs."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "imv8USeOewjy",
+        "colab": {}
+      },
+      "source": [
+        "model_filtered = DecisionTreeClassifier()\n",
+        "model_filtered.fit(filtered, y)\n",
+        "# evaluate model\n",
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+        "n_scores = cross_val_score(model_filtered, filtered,y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
+        "# report performance\n",
+        "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
