--- a/PCA4.ipynb
+++ b/PCA4.ipynb
@@ -6,7 +6,7 @@
       "name": "PCA4.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPr1Zd5PtJckRGNVCvB7rrx",
+      "authorship_tag": "ABX9TyPQBWPpR3V+2sW4kZDxtsrg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -246,7 +246,7 @@
       },
       "source": [
         "It's clear the images are noisy, and contain spurious pixels.<br>\n",
-        "Let's train a PCA on the noisy data, requesting that the projection preserve 50% of the variance:"
+        "Let's train a PCA on the noisy data, requesting that the projection preserve a percentage of the variance:"
       ]
     },
     {
@@ -257,7 +257,8 @@
         "colab": {}
       },
       "source": [
-        "pca = PCA(0.50).fit(noisy)\n",
+        "#Assignment 1 - make changes here\n",
+        "pca = PCA(0.20).fit(noisy)\n",
         "pca.n_components_"
       ],
       "execution_count": null,
@@ -299,6 +300,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qdkPsZEDfXov",
+        "colab_type": "text"
+      },
+      "source": [
+        "Train the model on the filtered data<br>\n",
+        "Note the improved accuracy over the noisy data, but the accuracy is not as good as the clean data. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -313,6 +325,47 @@
         "n_scores = cross_val_score(model_filtered, filtered,y, scoring='accuracy', cv=cv, n_jobs=-1, error_score='raise')\n",
         "# report performance\n",
         "print('Accuracy: %.3f (%.3f)' % (mean(n_scores), std(n_scores)))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xn8zNeohgJaL",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Assignment 1**<br>\n",
+        "1. Change the threshold for the variance for the filtered model. <br>\n",
+        "2. What is the optimum threshold for variance to improve the accuracy of the filtered model?\n",
+        "What happens to the accuracy of the model when the number of principal components changes?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hhy6r4r8f_O2",
+        "colab_type": "text"
+      },
+      "source": [
+        "# **Assignment 2**<br>\n",
+        "Plot the PCA curve for the filtered data. \n",
+        "What is the optimum number of principal components?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lAeKxMlhf6Ds",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "pca = PCA().fit(filtered)\n",
+        "plt.plot(np.cumsum(pca.explained_variance_ratio_))\n",
+        "plt.xlabel('number of components')\n",
+        "plt.ylabel('cumulative explained variance');"
       ],
       "execution_count": null,
       "outputs": []
