--- a/Logistic_Regression_for_Nan.ipynb
+++ b/Logistic_Regression_for_Nan.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression for Nan.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyP4sukZTlL9IgKhXs3wz9Ap",
+      "authorship_tag": "ABX9TyOGL126iKu3zN3/d2tJjan9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,21 +41,7 @@
         "import seaborn as sns\n",
         "from sklearn import metrics\n",
         "\n",
-        "\n",
-        "\n",
-        "from matplotlib.colors import ListedColormap\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "from sklearn.datasets import make_moons, make_circles, make_classification\n",
-        "from sklearn.neural_network import MLPClassifier\n",
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.svm import SVC\n",
-        "from sklearn.gaussian_process import GaussianProcessClassifier\n",
-        "from sklearn.gaussian_process.kernels import RBF\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
-        "from sklearn.naive_bayes import GaussianNB\n",
-        "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis"
+        "from sklearn.datasets import make_moons, make_circles, make_classification\n"
       ],
       "execution_count": null,
       "outputs": []
