--- a/Logistic_Regression_for_Nan.ipynb
+++ b/Logistic_Regression_for_Nan.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression for Nan.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOGL126iKu3zN3/d2tJjan9",
+      "authorship_tag": "ABX9TyPMGrFegz2192cu5IEhAeEE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,15 +33,14 @@
         "colab": {}
       },
       "source": [
-        "import numpy as np\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LogisticRegression\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn import metrics\n",
-        "\n",
-        "from sklearn.datasets import make_moons, make_circles, make_classification\n"
+        "from sklearn.datasets import make_classification\n"
       ],
       "execution_count": null,
       "outputs": []
