--- a/Logistic_Regression_for_Nan.ipynb
+++ b/Logistic_Regression_for_Nan.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Logistic Regression for Nan.ipynb",
-      "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOyHeLVyFEVHgj5XAHBPgvP",
+      "provenance": [],
+      "authorship_tag": "ABX9TyOOT7RuGJf5dezZhnK80fr2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5SsgOyNl12La",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5SsgOyNl12La"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -46,8 +44,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8XF4uLzv3F75",
-        "colab_type": "text"
+        "id": "8XF4uLzv3F75"
       },
       "source": [
         "**Make Sythnetic Data**<br>\n",
@@ -59,9 +56,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nU2ic_vv10_9",
-        "colab_type": "code",
-        "colab": {}
+        "id": "nU2ic_vv10_9"
       },
       "source": [
         "X,y = make_classification(n_samples=300, n_features=30,  n_classes=2, n_clusters_per_class=1)"
@@ -72,9 +67,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZlpePdXH25tB",
-        "colab_type": "code",
-        "colab": {}
+        "id": "LTGcslMhWt0u"
+      },
+      "source": [
+        "X"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZlpePdXH25tB"
       },
       "source": [
         "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -86,8 +90,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cBLGkrA53-dZ",
-        "colab_type": "text"
+        "id": "cBLGkrA53-dZ"
       },
       "source": [
         "**The data is split into 219 training samples and 81 test samples**"
@@ -96,9 +99,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QB4LzDUM3mXy",
-        "colab_type": "code",
-        "colab": {}
+        "id": "QB4LzDUM3mXy"
       },
       "source": [
         "print(\"X_train: \", X_train.shape)\n",
@@ -110,8 +111,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1hxsUI504CRS",
-        "colab_type": "text"
+        "id": "1hxsUI504CRS"
       },
       "source": [
         "**Train the model on the training data**"
@@ -120,9 +120,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1ZOZf7MY4ha_",
-        "colab_type": "code",
-        "colab": {}
+        "id": "1ZOZf7MY4ha_"
       },
       "source": [
         "model_lr = LogisticRegression(random_state=0).fit(X_train, y_train)"
@@ -133,8 +131,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cL44vx3351Xo",
-        "colab_type": "text"
+        "id": "cL44vx3351Xo"
       },
       "source": [
         "**Predict with the model**"
@@ -143,9 +140,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OBMah56K53XT",
-        "colab_type": "code",
-        "colab": {}
+        "id": "OBMah56K53XT"
       },
       "source": [
         "predictions = model_lr.predict(X_test)"
@@ -156,8 +151,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_Y6pjI7659yv",
-        "colab_type": "text"
+        "id": "_Y6pjI7659yv"
       },
       "source": [
         "**Measure accuracy of the model**"
@@ -166,9 +160,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-fjKuYAB6FbO",
-        "colab_type": "code",
-        "colab": {}
+        "id": "-fjKuYAB6FbO"
       },
       "source": [
         "# Use score method to get accuracy of model\n",
@@ -181,24 +173,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HN0PLDUc6b1y",
-        "colab_type": "text"
+        "id": "HN0PLDUc6b1y"
       },
       "source": [
         "**The confusion matrix**<br>\n",
-        "The model makes <br>\n",
-        "41 correct true positive predictions<br>\n",
-        "38 correct true negative predictions<br>\n",
-        "0 false positves<br>\n",
-        "2 false negative<br>"
+        "The model makes: <br>\n",
+        ">Correct true positive predictions, position [0,0]<br>\n",
+        "Correct true negative predictions, position [1,1]<br>\n",
+        "False positves,position [0,1]<br>\n",
+        "False negative, position [1,0]<br>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_CKjfsfr6cAW",
-        "colab_type": "code",
-        "colab": {}
+        "id": "_CKjfsfr6cAW"
       },
       "source": [
         "cm = metrics.confusion_matrix(y_test, predictions)\n",
@@ -210,8 +199,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LRjXid5z7S6T",
-        "colab_type": "text"
+        "id": "LRjXid5z7S6T"
       },
       "source": [
         "**The confusion matrix plotted nicely**"
@@ -220,9 +208,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mld4Z7r-7EyR",
-        "colab_type": "code",
-        "colab": {}
+        "id": "mld4Z7r-7EyR"
       },
       "source": [
         "plt.figure(figsize=(9,9))\n",
